# DemoTime

./: .gitignore  .replit  CHANGELOG.md  app.py  blockade_summary.json  core_helpers.py  demo_blocker_run.py  demo_en.lexo  demo_es.lexo  demo_es_stress.lexo  demo_esdestress.lexo  demo_esdestress_final.lexo  demo_esmulti.lexo  ethics.yaml  ethics_rules.yaml  lint_summary.json  linter.py  main.py  models.py  pyproject.toml  replit.md  report.csv  report.json  requirements.txt  routes.py  run_2025-08-27_20-46-24.json  run_2025-08-30_04-22-55.json  run_2025-08-30_04-49-00.json  run_2025-08-30_05-05-08.json  run_2025-08-30_05-30-23.json  run_2025-08-30_05-31-27.json  run_2025-08-30_06-01-04.json  run_2025-08-30_06-06-00.json  run_2025-09-02_23-44-38.json  run_2025-09-03_00-33-20.json  run_2025-09-03_01-02-55.json  run_2025-09-03_01-29-42.json  run_2025-09-03_01-33-01.json  run_2025-09-03_01-35-21.json  run_2025-09-03_01-36-44.json  (+117 more)
.github/: black.toml
.github/workflows/: lint.yml  tests.yml
instance/: demo.db
lexo/: blocker.py
static/css/: custom.css
static/js/: charts.js  interactive.js  main.js
templates/: api_demo.html  base.html  charts_demo.html  forms_demo.html  index.html  interactive_demo.html
tests/: test_blocker.py
