[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.42",
    "werkzeug>=3.1.3",
]
[tool.black]
line-length = 100
target-version = ["py311"]   # <- cambiar a py311 (o py312 si querés)

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
